--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Research Lab
-email: your-email@domain.com
+title: MINi lab.
+email: francois.m.rheault@usherbrooke.ca
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Home of the Medical Imaging and NeuroInformatic laboratory (MINi lab).
+  Research on diffusion magnetic resonance imaging, neuroimaging, tractography.
+  Projects on reproducibility, replicability, algorithmic performance, visualization and processing pipeline.
 baseurl: ""
 url: ""
 
